[gd_scene load_steps=13 format=3 uid="uid://da8s0fkwwmdle"]

[ext_resource type="Script" path="res://scences/main/main.gd" id="1_xn4ul"]
[ext_resource type="Resource" uid="uid://dk2sl2aapuwe7" path="res://scences/main/run_startup.tres" id="2_71wrl"]
[ext_resource type="PackedScene" uid="uid://klm1dw58y8fj" path="res://scences/map/map.tscn" id="3_oqdot"]
[ext_resource type="PackedScene" uid="uid://bwuexw3t61b0h" path="res://scences/ui/settings/settings_bar.tscn" id="4_0dled"]
[ext_resource type="PackedScene" uid="uid://bv46ipaamtkwu" path="res://scences/ui/menus/bestiary.tscn" id="5_hswd5"]
[ext_resource type="PackedScene" uid="uid://iq0kljjd6vul" path="res://scences/cores/core_handler.tscn" id="5_w82hd"]
[ext_resource type="PackedScene" uid="uid://cmrfdlp25wcby" path="res://addons/simply-console/scenes/console_window.tscn" id="6_0syis"]
[ext_resource type="Script" path="res://scences/main/shaker.gd" id="7_kpps0"]

[sub_resource type="LabelSettings" id="LabelSettings_itc3d"]
font_size = 8

[sub_resource type="Animation" id="Animation_u5hhp"]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScenceTransition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScenceTransition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mcieo"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScenceTransition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScenceTransition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_km6g1"]
_data = {
"fade_in": SubResource("Animation_u5hhp"),
"fade_out": SubResource("Animation_mcieo")
}

[node name="Main" type="Node"]
script = ExtResource("1_xn4ul")
run_startup = ExtResource("2_71wrl")

[node name="Map" parent="." instance=ExtResource("3_oqdot")]
unique_name_in_owner = true
position = Vector2(-2, 0)

[node name="CurrentView" type="Node" parent="."]
unique_name_in_owner = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VersionNumber" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -44.0
offset_top = 3.0
offset_right = -4.0
offset_bottom = 15.0
grow_horizontal = 0
text = "Pre-Alpha 0.1.12 - Rust is cool I think"
label_settings = SubResource("LabelSettings_itc3d")

[node name="CoreHandler" parent="UI" instance=ExtResource("5_w82hd")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 15.0
offset_top = 70.0
offset_right = 77.0
offset_bottom = 126.0

[node name="BestiaryLayer" type="CanvasLayer" parent="UI"]
layer = 99

[node name="Bestiary" parent="UI/BestiaryLayer" instance=ExtResource("5_hswd5")]
unique_name_in_owner = true
physics_interpolation_mode = 0
visible = false

[node name="SettingsBar" parent="UI" instance=ExtResource("4_0dled")]
unique_name_in_owner = true
layout_mode = 0
offset_left = -2.0
offset_right = 332.0

[node name="ScenceTransition" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_km6g1")
}

[node name="ColorRect" type="ColorRect" parent="ScenceTransition"]
unique_name_in_owner = true
visible = false
anchors_preset = -1
anchor_left = -0.6625
anchor_top = -0.836111
anchor_right = 1.56406
anchor_bottom = 2.20833
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.117647, 0.0509804, 1)
metadata/_edit_use_anchors_ = true

[node name="ConsoleWindow" parent="." instance=ExtResource("6_0syis")]
unique_name_in_owner = true
initial_position = 0
position = Vector2i(50, 40)
size = Vector2i(300, 200)
visible = false
borderless = true
always_on_top = true

[node name="Shaker" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("7_kpps0")
